added form validation

--- a/pracitceform/form.html
+++ b/pracitceform/form.html
@@ -4,40 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../form_validation/style.css">
 </head>
 <body>
-    <form >
-        <h1>Personal Details</h1>
-        <label for="name">Name</label>
-        <input type="text" pattern="[a-zA-Z]{,3}" id="name" title="minimum 3 letters required" placeholder="enter name">
-        <br><br>
-        <label for="email">Email</label>
-        <input type="email" id="email" placeholder="You@example.com" required>
-        <br><br>
-       
-        <label for="Age">Age</label>
-        <input type="number" min="18" max="60">
-        <br><br>
-        <label for="phone">phone</label>
-        <input type="text" pattern="[0-9]{10}" title="enter exactly 10 digits" placeholder="Enter phone" >
-        <br><br>
-        <label for="gender">Gender:</label>
-        <input type="radio" value="male" name="gender" required>Male
-        <input type="radio" value="female" name="gender" required>Female
-        <input type="radio" value="others" name="gender" required>Others
-        <br><br>
-        <label for="language">Languages:</label>
-        <input type="checkbox" value="English" id="language">English
-        <input type="checkbox" value="hindi" id="language">Hindi
-        <input type="checkbox" value="punjabi" id="language">punjabi
-        <input type="checkbox" value="spanish" id="language">spanish
-        <br><br>
-         <label for="password">Password</label>
-        <input type="password" id="password" max="12" min="6" placeholder="Enter password" >
-        <br><br> <label for="cpassword">Confirm Password</label>
-        <input type="cpassword" id="cpassword"  >
-        <br><br>
-        <input type="submit" >
+        <div id="container">
+            <form id="form">
+                <h1 style="text-align:center;">Personal Details</h1>
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" pattern="[a-zA-Z]{3,}" id="name" title="minimum 3 letters required" placeholder="Enter name">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="You@example.com" required>
+                </div>
+                <div>
+                    <label for="Age">Age</label>
+                    <input type="number" min="18" max="60" placeholder="Enter age">
+                </div>
+                <div>
+                    <label for="phone">Phone</label>
+                    <input type="text" pattern="[0-9]{10}" title="Enter exactly 10 digits" placeholder="Enter phone">
+                </div>
+                <div>
+                    <label>Gender:</label><br>
+                    <input type="radio" value="male" name="gender" required> Male
+                    <input type="radio" value="female" name="gender" required> Female
+                    <input type="radio" value="others" name="gender" required> Others
+                </div>
+                <div>
+                    <label>Languages:</label><br>
+                    <input type="checkbox" value="English" name="language"> English
+                    <input type="checkbox" value="Hindi" name="language"> Hindi
+                    <input type="checkbox" value="Punjabi" name="language"> Punjabi
+                    <input type="checkbox" value="Spanish" name="language"> Spanish
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" maxlength="12" minlength="6" placeholder="Enter password">
+                </div>
+                <div>
+                    <label for="cpassword">Confirm Password</label>
+                    <input type="password" id="cpassword" placeholder="Confirm password">
+                </div>
+                <div style="text-align:center;">
+                    <input type="submit" value="Submit" style="padding:8px 16px; background:#007bff; color:#fff; border:none; border-radius:4px; cursor:pointer;">
+                </div>
+            </form>
+        </div>
 
     </form>
     
