--- a/dom/index.html
+++ b/dom/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section><div class="box" id="box1" onclick="myfunction()">box1</div>
+    <section><div class="box" id="box1" >box1</div>
         <div class="box" id="box2" onmouseover="myfun2()">box2</div>
         <div class="box" id="box3">box3</div>
         <div class="box" id="box4">box4</div>
